# python-exif

./: README.md  main.py  pyproject.toml
aggexif/: aggeixf_argument.py  aggregator.py  exif_cache.py  exif_parser.py  exif_time_parser.py  filter_cond.py  group.py  hdf5_exif_cache.py  hdf5_string_cache.py  main.py  printer.py  sqlite_cache.py
python_exif/: aggregator.py  eixf_parser.py  filter_cond.py  printer.py  termgraph.py
tests/: test_python_exif.py
